Created Core Webpage Description

--- a/readme.mb
+++ b/readme.mb
@@ -14,7 +14,20 @@ Understanding of why we are doing this project
 
 ### Core Webpages
 
-List core webpages and briefly describe the page of them
+Home Page - Cultural Dieties of the Moon: Similarities and Differences
+    This page will introduce a handful of ancient astral dieties from different cultures, and their origins.
+
+Lore Page - Origins and cultures
+    This page will discuss all of the dieties and how the cultures that they were associated with established their overall story, abilities, historical background and roles in that cultures nature.
+
+Comparison Page - Comparing and Contrasting
+    This page will dive into which cultures may have similar beliefs in how these dieties work. It will discuss the many differences, as well as
+    finding data that is complementary between cultures. It will also discuss the idea of one diety with different names in differing cultures and religions.
+
+Poll Page - Who's your favorite?
+    This page will be an interactive page including all the names of the dieties and their main qualities and powers, and will encourage the viewer to pick their favorite and vote for them on a poll within the sight. This information will then be sent to the server for data analysis.
+
+
 
 ### Design Choices 
 
@@ -22,4 +35,8 @@ List any websites that you might reference to influence you styling choices
 
 ### Members & Responsibilities
 
-List all members and their roles
+Julie Savauge - President
+Corinne Beard - Architect & Designer
+Kylee Waggoner - Scrum Master
+Evan Apostolou - Analyst
+Margie Miller - Designer
